JS_multiSelector__box -> JS_itemBox

--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -10,7 +10,7 @@
     </ul><!-- /.itemBox__row -->
   </div>
 
-  <div class="itemBox JS_multiSelector__box">
+  <div class="itemBox JS_itemBox">
     <ul class="itemBox__row itemBox__row--item JS_selectionTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
