--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -1,6 +1,6 @@
 <div class="multiSelector multiSelector--popup JS_multiSelector--withColors" id="multiSelector-tagpicker">
 
-  <div class="itemBox JS_multiSelector__box ">
+  <div class="itemBox JS_itemBox ">
     <ul class="itemBox__row">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
@@ -13,7 +13,7 @@
     {% include blocks/popup/ms-tags-colors-suggestions.html %}
   </div>
 
-  <div class="itemBox JS_multiSelector__box">
+  <div class="itemBox JS_itemBox">
     <ul class="itemBox__row JS_selectionTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
