--- a/_includes/popups/singleSelect-breadcrumb.html
+++ b/_includes/popups/singleSelect-breadcrumb.html
@@ -1,6 +1,6 @@
 <div class="multiSelector multiSelector--popup multiSelector--popup-breadcrumb " id="multiSelector-breadcrumb">
 
-  <div class="itemBox JS_multiSelector__box">
+  <div class="itemBox JS_itemBox">
     <ul class="itemBox__row">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
