--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -12,7 +12,7 @@
     </ul>
   </div>
 
-  <div class="itemBox JS_multiSelector__box">
+  <div class="itemBox JS_itemBox">
     <ul class="itemBox__row itemBox__row--item JS_selectionTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
