--- a/_includes/popups/ms-status2.html
+++ b/_includes/popups/ms-status2.html
@@ -2,7 +2,7 @@
 
 
 
-  <div class="itemBox JS_multiSelector__box">
+  <div class="itemBox JS_itemBox">
     <ul class="itemBox__row">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
