--- a/_includes/javascript/addAction.html
+++ b/_includes/javascript/addAction.html
@@ -1,4 +1,4 @@
-<li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--add">
+<li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__action">
   <div class="itemBox__cellInner">
     <div class="itemBox__action JS_itemBox__action--add">ބ</div>
   </div>
