added missing JS_itemBox__action classes for popups

--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -24,7 +24,7 @@
           {% include javascript/and-or-selector.html %}
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll">
+      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
         <div class="itemBox__cellInner">
           <div class="itemBox__action JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
         </div>
@@ -43,7 +43,7 @@
             {% include javascript/and-or-selector.html %}
           </div>
         </li>
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
           <div class="itemBox__cellInner">
             <div class="itemBox__action JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
           </div>
@@ -71,7 +71,7 @@
               <div class="itemBox__action itemBox__action--hidden">އ</div>
             </div>
           </li>
-          <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove">
+          <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
             <div class="itemBox__cellInner">
               <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
             </div>
@@ -97,7 +97,7 @@
               <div class="itemBox__action itemBox__action--hidden">އ</div>
             </div>
           </li>
-          <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove">
+          <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
             <div class="itemBox__cellInner">
               <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
             </div>
@@ -116,7 +116,7 @@
             {% include javascript/and-or-selector.html %}
           </div>
         </li>
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
           <div class="itemBox__cellInner">
             <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
           </div>
@@ -146,7 +146,7 @@
                   <div class="itemBox__action itemBox__action--hidden">އ</div>
                 </div>
               </li>
-              <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove">
+              <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
                 <div class="itemBox__cellInner">
                   <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
                 </div>
@@ -173,7 +173,7 @@
                   <div class="itemBox__action itemBox__action--hidden">އ</div>
                 </div>
               </li>
-              <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove">
+              <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
                 <div class="itemBox__cellInner">
                   <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
                 </div>
@@ -192,7 +192,7 @@
           <div class="itemBox__action">अ All</div>
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll">
+      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
         <div class="itemBox__cellInner">
           <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
         </div>
@@ -216,7 +216,7 @@
 
           </div>
         </li>
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
           <div class="itemBox__cellInner">
             <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
           </div>
@@ -239,7 +239,7 @@
 
           </div>
         </li>
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
           <div class="itemBox__cellInner">
             <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
           </div>
@@ -262,7 +262,7 @@
 
           </div>
         </li>
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
           <div class="itemBox__cellInner">
             <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
           </div>
@@ -285,7 +285,7 @@
 
           </div>
         </li>
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__action">
           <div class="itemBox__cellInner">
             <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
           </div>
