update item header and add checkbox in selectors

--- a/_includes/blocks/old-pmx-item-detail.html
+++ b/_includes/blocks/old-pmx-item-detail.html
@@ -1,5 +1,5 @@
 <div class="item item--bug">
-  <div class="sticky-header">
+  <div class="sticky-headerrrrr">
     {% include blocks/item-header.html %}
   </div>
 </div>
@@ -10,23 +10,6 @@
             <div id="ctl00_PageContentPlaceHolder_ctl00_ItemDetailContent">
 
                 <div class="header">
-
-                  <!--
-                    <div class="title">
-                        <span class="itemid">
-                          <span id="fld_659309_Item_1" class="hasnoipe">391441</span>
-                        </span>
-                        <h1 class="">
-                          <span id="fld_659309_Item_2" class="hasipe" title="Click here to edit"><a class="focuscatcher" href="#"></a>PMX - Fix horizontal scroll alterneting in FireFox</span>
-                        </h1>
-                        <ul class="actions">
-                            <li id="CommentsTab" tab-name="comments" class="comments"><a id="CommentsTabLabel" href="#">0</a></li>
-                            <li id="AttachmentsTab" tab-name="attachments" class="attachments"><a id="AttachmentsTabLabel" href="#">0</a></li>
-                            <li id="HistoryTab" tab-name="history" class="history"><a href="#"></a></li>
-                        </ul>
-                    </div>
-                  -->
-                  
                     <div class="actions">
                         <ul id="ctl00_PageContentPlaceHolder_ctl00_ItemTools_itemdetailtools">
                             <li class="delete" title="Permanently delete this item. This cannot be undone"><a href="#">Delete</a></li>
