update item header

--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -34,8 +34,7 @@
               <div class="pmx-selector__itemSeperator"></div>
               <div class="pmx-selector__item  JS_selectorItem JS_toggle-comments">
                 <div class="pmx-selector__block">
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix"></div>
-                  <div class="pmx-selector__blockPart pmx-selector__blockPart--counter"><sup>11</sup></div>
+                  <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix"><sup>11</sup></div>
                 </div>
               </div>
               <div class="pmx-selector__itemSeperator"></div>
