--- a/sass/blocks/item-header.scss
+++ b/sass/blocks/item-header.scss
@@ -17,18 +17,35 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
-      padding: 45px 15px 15px 15px;
+      height: 17px;
+      margin: 45px 0 15px;
+      padding: 0 15px;
       background-color: #FFF;
-      z-index: 0;
+      z-index: 1;
       opacity: 0;
       transition: all .3s ease-in-out;
 
       &:focus {
-        z-index: 1;
+        height: 100%;
+        margin: 0;
+        padding: 45px 15px 15px;
         opacity: 1;
 
-        .item-header__aside {
+        ~ .item-header__head {
+          &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 150px;
+            height: 100%;
+            background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, white 100%);
+            z-index: 1;
+            pointer-events: none;
+          }
+        }
+
+        ~ .item-header__aside {
           z-index: 0;
         }
       }
@@ -102,7 +119,7 @@
       height: 100%;
       background-color: #FFF;
       padding: 10px;
-
+      z-index: 2;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -115,6 +132,8 @@
         width: 50px;
         height: 100%;
         background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
+        z-index: 1;
+        pointer-events: none;
       }
     }
 
